<resources>
    <string name="app_name">NewsMVVM</string>
    <string name="home">Home</string>
    <string name="news_category">News Category</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
</resources>
